--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 <head>
   <meta charset="utf-8">
   <title>Luis Guilherme Berns Silva - Ux Designer - Resume</title>
   <link href="css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="shotcut icon" href="images/fav-icon.png">
+  <style media="screen">
+    html {background-color: black;}
+  </style>
 </head>
 
 <body>
