improve speed js

--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
     <div id="fab-button"></div>
   </div>
 
-  <script src="js/jQuery.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
-  <script src="js/vanilla.js"></script>
+  <script src="js/helper-min.js"></script>
 
-  <script src="js/helper.js"></script>
-
-  <script src="js/resumeBuilder.js"></script>
+  <script src="js/resumeBuilder-min.js"></script>
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFIkkUzJ45vp_BLVfwcAIaAR8bm5z4Ggs&libraries=places&callback=initMap"></script>
 
