Added initial data structure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <li class="item-data"><img src="img/github.svg" alt="Github info icon"><span>/louisberns</span></li>
             </a>
             <a href="https://twitter.com/louisuntitled" target="_blank" class="list-item">
-              <li class="item-data"><img src="img/twitter.svg" alt="Twitter info icon"><span>@louisberns</span></li>
+              <li class="item-data"><img src="img/twitter.svg" alt="Twitter info icon"><span>@louisuntitled</span></li>
             </a>
             <a href="#" class="list-item" id="location-link">
               <li class="item-data"><img src="img/location.svg" alt="Location info icon"><span>Maringá-PR - Brazil</span></li>
