--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <a href="mailto:louisuntitled@gmail.com" class="list-item">
               <li class="item-data"><img src="img/email.svg" alt="E-mail info icon"><span>louisuntitled@gmail.com</span></li>
             </a>
-            <a href="https://www.linkedin.com/in/louisberns/" target="_blank" class="list-item">
-              <li class="item-data"><img src="img/linkedin.svg" alt="Linkedin info icon"><span>/in/louisberns</span></li>
+            <a href="https://www.linkedin.com/in/luisberns/" target="_blank" class="list-item">
+              <li class="item-data"><img src="img/linkedin.svg" alt="Linkedin info icon"><span>/in/luisberns</span></li>
             </a>
-            <a href="https://github.com/louisberns" target="_blank" class="list-item">
-              <li class="item-data"><img src="img/github.svg" alt="Github info icon"><span>/louisberns</span></li>
+            <a href="https://github.com/luisberns" target="_blank" class="list-item">
+              <li class="item-data"><img src="img/github.svg" alt="Github info icon"><span>/luisberns</span></li>
             </a>
-            <a href="https://twitter.com/louisuntitled" target="_blank" class="list-item">
-              <li class="item-data"><img src="img/twitter.svg" alt="Twitter info icon"><span>@louisuntitled</span></li>
+            <a href="https://twitter.com/luis_berns" target="_blank" class="list-item">
+              <li class="item-data"><img src="img/twitter.svg" alt="Twitter info icon"><span>@luis_berns</span></li>
             </a>
             <a href="#" class="list-item" id="location-link">
               <li class="item-data"><img src="img/location.svg" alt="Location info icon"><span>Maringá-PR - Brazil</span></li>
